[package]
name = "claude-client"
version = "0.3.1"
edition = "2021"
description = "A Rust client for the Anthropic Claude API"
authors = ["Shane Witbeck <shane@surly.dev>"]
license = "Apache-2.0"
repository = "https://github.com/thesurlydev/claude-client"
documentation = "https://docs.rs/claude-client"
readme = "README.md"
keywords = ["claude", "anthropic", "ai", "llm", "client"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
rust-version = "1.75.0"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
